# ai_waifu

./: .gitignore  README.md  config.yaml  live2d_py-0.5.4-cp311-cp311-win_amd64.whl  main.py  pyproject.toml  req.txt  resources.py  test.py
resources/: .gitignore
resources/v3/huohuo/: huohuo.model3.json
scripts/: gpt.py  gui.py  live2d.py  translate.py  tts.py
